syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.api;

option java_outer_classname = "LedgerEntryApi";

service LedgerEntry {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.LedgerEntry"
      entity_type: "ledger_entry"
      state: "io.aggregator.entity.LedgerEntryState"
      events: [
        "io.aggregator.entity.LedgerEntryCreated",
        "io.aggregator.entity.LedgerEntryPaymentAdded"
      ]
    }
  };

  rpc CreateLedgerEntry(CreateLedgerEntryCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/ledger-entry/create"
      body: "*"
    };
  }
  rpc AddPayment(AddPaymentCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/ledger-entry/add-payment"
      body: "*"
    };
  }

  rpc GetLedgerEntry(GetLedgerEntryRequest) returns (GetLedgerEntryResponse) {
    option (google.api.http) = {
      post: "/ledger-entry/get"
      body: "*"
    };
  }
}

message CreateLedgerEntryCommand {
  string transaction_id = 1[(kalix.field).entity_key = true];
  string service_code = 2[(kalix.field).entity_key = true];
  string account_from = 3[(kalix.field).entity_key = true];
  string account_to = 4[(kalix.field).entity_key = true];
  google.protobuf.Timestamp timestamp = 5;
  string amount = 6;
  string shop_id = 7;
  string merchant_id = 8;
  string event_type = 9;
}

message AddPaymentCommand {
  string transaction_id = 1[(kalix.field).entity_key = true];
  string service_code = 2[(kalix.field).entity_key = true];
  string account_from = 3[(kalix.field).entity_key = true];
  string account_to = 4[(kalix.field).entity_key = true];
  google.protobuf.Timestamp timestamp = 5;
  string payment_id = 6;
}

message GetLedgerEntryRequest {
  string transaction_id = 1[(kalix.field).entity_key = true];
  string service_code = 2[(kalix.field).entity_key = true];
  string account_from = 3[(kalix.field).entity_key = true];
  string account_to = 4[(kalix.field).entity_key = true];
}

message GetLedgerEntryResponse {
  string amount = 1;
  string payment_id = 2;
}
